fix: fix the modal alignment issue

--- a/src/Pages/ChatView/payment.css
+++ b/src/Pages/ChatView/payment.css
@@ -5,7 +5,7 @@
   width: 100%;
   text-align: center;
   border-radius: 20px 20px 0 0;
-  position: absolute;
+  position: fixed;
   z-index: 100;
   bottom: 0;
   padding: 20px;
